# chaz

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/maps/: 00_map.txt  01_map.txt  02_map.txt  03_map.txt  level_01
assets/positions/: 00_positions.txt  01_positions.txt  02_positions.txt  03_positions.txt
src/: background.rs  button.rs  camera.rs  main.rs  options.rs  score.rs  screen.rs  sound.rs  sprite.rs
src/state/: mod.rs
src/state/game/: direction.rs  enemies.rs  hitbox.rs  map.rs  mod.rs  player.rs  positions.rs  velocity.rs
src/state/game_over/: mod.rs
src/state/loading/: mod.rs
src/state/menu/: mod.rs
