[package]
name = "chaz"
version = "0.1.0"
edition = "2021"
authors = ["Luiz Chagas Jardim <luizchagasjardim@gmail.com", "Jorge Sousa (he/him/his) <sousajo@gmail.com>"]

[dependencies]
bevy = "0.6"
lazy_static = "1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
